--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing users</h1>
 
 <% if notice %>
-<p id="notice" ><%= notice %></p>
+<p id="notice"><%= notice %></p>
 <% end %>
 
 <table id="users-table">
@@ -22,7 +22,7 @@
         <td><%= user.created_at.strftime("%d/%m/%Y")%></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, :id => "delete_user_#{user.id}", :remote => true, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
